# genetic_series

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  main.go
bazel/: BUILD.bazel  texlive.bzl
cmd/eval/: main.go
investigations/: pi-consttune-experiments.md
logs/: 2026-02-16-feasibility-check.md
pkg/constants/: BUILD.bazel  constants.go
pkg/engine/: BUILD.bazel  config.go  engine.go  output.go
pkg/expr/: BUILD.bazel  eval.go  expr_test.go  parse_latex.go  parse_latex_test.go  simplify.go
pkg/pool/: BUILD.bazel
pkg/series/: BUILD.bazel  evaluate.go  parse_latex.go  parse_latex_test.go
pkg/strategy/: BUILD.bazel  consttune.go  tournament.go
plans/: diversity.md  good-bad-ugly.md  hypergeometric-templates.md  pslq-constant-identification.md  richardson-extrapolation.md  transform-targets.md
