"""Bazel module definition for genetic_series."""

module(
    name = "genetic_series",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.1")

texlive = use_extension("//bazel:texlive.bzl", "texlive")
use_repo(texlive, "texlive")
